@@ -6,8 +6,6 @@
 <file alias="cantata32.png">icons/cantata32.png</file>
 <file alias="cantata48.png">icons/cantata48.png</file>
 <file alias="cantata64.png">icons/cantata64.png</file>
-<file alias="consume16.png">icons/hi16-action-cantata-view-media-consume.png</file>
-<file alias="consume22.png">icons/hi22-action-cantata-view-media-consume.png</file>
 <file alias="repeat16.png">icons/hi16-action-cantata-view-media-repeat.png</file>
 <file alias="repeat22.png">icons/hi22-action-cantata-view-media-repeat.png</file>
 <file alias="shuffle16.png">icons/hi16-action-cantata-view-media-shuffle.png</file>
@@ -18,6 +16,10 @@
 <file alias="va48.png">icons/hi48-action-cantata-view-media-artist-various.png</file>
 <file alias="va64.png">icons/hi64-action-cantata-view-media-artist-various.png</file>
 <file alias="va128.png">icons/hi128-action-cantata-view-media-artist-various.png</file>
+<file alias="artist16.png">icons/view-media-artist16.png</file>
+<file alias="artist22.png">icons/view-media-artist22.png</file>
+<file alias="artist32.png">icons/view-media-artist32.png</file>
+<file alias="artist48.png">icons/view-media-artist48.png</file>
 <file alias="lib16.png">icons/hi16-action-cantata-view-media-library.png</file>
 <file alias="lib32.png">icons/hi32-action-cantata-view-media-library.png</file>
 <file alias="wiki16.png">icons/hi16-action-cantata-view-wikipedia.png</file>
